CSS基础综合练习1 完成！

--- a/catalog.html
+++ b/catalog.html
@@ -12,7 +12,7 @@
     <hr>
     <br>
     <div>
-        <a href="#">2.18 综合练习</a>
+        <a href="#">2.18 CSS基础综合案例1——文章</a>
     </div>
     
 </body>
