修改了目录地址

--- a/catalog.html
+++ b/catalog.html
@@ -12,8 +12,8 @@
     <hr>
     <br>
     <div>
-        <a href="#">2.18 CSS基础综合案例1——文章</a><br>
-        <a href="#">2.19 CSS基础综合案例2——产品图片与效果</a>
+        <a href="./ComprehensiveExercises/BaseCss.html">2.18 CSS基础综合案例1——文章</a><br>
+        <a href="./ComprehensiveExercises/BaseCSS2.html">2.19 CSS基础综合案例2——产品图片与效果</a>
     </div>
     
 </body>
